added contact page

--- a/Papula/src/app/contactus/contactus.component.html
+++ b/Papula/src/app/contactus/contactus.component.html
@@ -1,1 +1,17 @@
-<p>contactus works!</p>
+<form>
+    <div class="m-3 container">
+        <div><textarea name="message" id="message" placeholder="Your message" cols="60" rows="10"></textarea></div>
+        
+        <label for="exampleInputEmail1" class="form-label">Phonenumber</label>
+        <input type="number" class="form-control">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div class="input-group mt-3">
+            <span class="input-group-text">First and last name</span>
+            <input type="text" aria-label="First name" class="form-control">
+            <input type="text" aria-label="Last name" class="form-control">
+          </div>
+        <button type="submit" class="mt-3 btn btn-primary">Submit</button>
+    </div>
+    
+</form>
