--- a/classworkTravelApp/src/app/home/home.component.html
+++ b/classworkTravelApp/src/app/home/home.component.html
@@ -1,20 +1,24 @@
-<!-- <p>home works!</p> -->
-<div class="card m-3" style="width: 18rem">
-  <img
-    src="https://images.unsplash.com/photo-1577456020912-85d0604ad403?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
-    class="card-img-top"
-    alt="${this.destination}"
-  />
-  <div class="card-body">
-    <h5 class="card-title">Destination</h5>
-    <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of
-      the card's content.
-    </p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Price:</li>
-    <li class="list-group-item">Night:</li>
-    <li class="list-group-item">City:</li>
-  </ul>
+<div class="row m-3 d-flex justify-content-center">
+  <ng-template [ngIf]="trips.length > 0" [ngIfElse]="empty">
+    <div class="col row-col-md-4 row-col-lg-2" *ngFor="let trip of trips">
+      <div class="card m-2" style="width: 18rem">
+        <img src="{{ trip.img }}" alt="{{ trip.name }}" />
+        <div class="card-body">
+          <h5 class="card-title">{{ trip.name }}</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Price: € {{ trip.price }}</li>
+          <li class="list-group-item">Night: {{ trip.night }} nights</li>
+          <li class="list-group-item">City: {{ trip.city }}</li>
+        </ul>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template #empty>
+    <p class="text-center fw-bold">No trips found</p>
+  </ng-template>
 </div>
